Initial upgrade process support