@@ -1,4 +1,4 @@
-package io.apicurio.registry.storage.importing;
+package io.apicurio.registry.storage.importing.v2;
 
 import io.apicurio.registry.content.ContentHandle;
 import io.apicurio.registry.content.TypedContent;
@@ -10,23 +10,37 @@ import io.apicurio.registry.storage.impexp.EntityInputStream;
 import io.apicurio.registry.storage.impl.sql.RegistryStorageContentUtils;
 import io.apicurio.registry.storage.impl.sql.SqlUtil;
 import io.apicurio.registry.types.RegistryException;
-import io.apicurio.registry.utils.impexp.*;
+import io.apicurio.registry.types.VersionState;
+import io.apicurio.registry.utils.impexp.Entity;
+import io.apicurio.registry.utils.impexp.v2.ArtifactRuleEntity;
+import io.apicurio.registry.utils.impexp.v2.ArtifactVersionEntity;
+import io.apicurio.registry.utils.impexp.v2.CommentEntity;
+import io.apicurio.registry.utils.impexp.v2.ContentEntity;
+import io.apicurio.registry.utils.impexp.v2.GlobalRuleEntity;
+import io.apicurio.registry.utils.impexp.v2.GroupEntity;
+import io.apicurio.registry.utils.impexp.v3.ArtifactEntity;
 import org.apache.commons.codec.digest.DigestUtils;
 import org.slf4j.Logger;
 
 import java.io.IOException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
-public class SqlDataImporter extends AbstractDataImporter {
+public class SqlDataUpgrader extends AbstractDataImporter {
 
     protected RegistryStorageContentUtils utils;
 
     protected final RegistryStorage storage;
 
-    private final boolean preserveGlobalId;
+    protected final boolean preserveGlobalId;
 
-    private final boolean preserveContentId;
+    protected final boolean preserveContentId;
 
     // To handle the case where we are trying to import a version before its content has been imported
     protected final List<ArtifactVersionEntity> waitingForContent = new ArrayList<>();
@@ -40,9 +54,8 @@ public class SqlDataImporter extends AbstractDataImporter {
 
     // To keep track of which versions have been imported
     private final Set<GAV> gavDone = new HashSet<>();
-    private final Map<GAV, List<BranchEntity>> artifactBranchesWaitingForVersion = new HashMap<>();
 
-    public SqlDataImporter(Logger logger, RegistryStorageContentUtils utils, RegistryStorage storage,
+    public SqlDataUpgrader(Logger logger, RegistryStorageContentUtils utils, RegistryStorage storage,
             boolean preserveGlobalId, boolean preserveContentId) {
         super(logger);
         this.utils = utils;
@@ -52,23 +65,15 @@ public class SqlDataImporter extends AbstractDataImporter {
     }
 
     @Override
-    public void importArtifactRule(ArtifactRuleEntity entity) {
+    protected void importArtifactRule(ArtifactRuleEntity entity) {
         try {
-            storage.importArtifactRule(entity);
+            io.apicurio.registry.utils.impexp.v3.ArtifactRuleEntity newEntity = io.apicurio.registry.utils.impexp.v3.ArtifactRuleEntity
+                    .builder().type(entity.type).artifactId(entity.artifactId)
+                    .configuration(entity.configuration).groupId(entity.groupId).build();
+            storage.importArtifactRule(newEntity);
             log.debug("Artifact rule imported successfully: {}", entity);
         } catch (Exception ex) {
             log.warn("Failed to import artifact rule {}: {}", entity, ex.getMessage());
-        }
-    }
-
-    @Override
-    protected void importArtifact(ArtifactEntity entity) {
-        try {
-            storage.importArtifact(entity);
-            log.debug("Artifact imported successfully: {}", entity);
-        } catch (Exception ex) {
-            log.warn("Failed to import artifact {} / {}: {}", entity.groupId, entity.artifactId,
-                    ex.getMessage());
         }
     }
 
@@ -89,7 +94,31 @@ public class SqlDataImporter extends AbstractDataImporter {
                 entity.globalId = storage.nextGlobalId();
             }
 
-            storage.importArtifactVersion(entity);
+            io.apicurio.registry.utils.impexp.v3.ArtifactVersionEntity newEntity = io.apicurio.registry.utils.impexp.v3.ArtifactVersionEntity
+                    .builder().createdOn(entity.createdOn).description(entity.description)
+                    .labels(entity.labels != null
+                        ? entity.labels.stream().collect(Collectors.toMap(label -> label, label -> label))
+                        : Collections.emptyMap())
+                    .name(entity.name).owner(entity.createdBy)
+                    .state(VersionState.fromValue(entity.state.value())).artifactId(entity.artifactId)
+                    .versionOrder(entity.versionId).modifiedOn(entity.createdOn).modifiedBy(entity.createdBy)
+                    .version(entity.version).globalId(entity.globalId).contentId(entity.contentId)
+                    .groupId(entity.groupId).build();
+
+            // If the version being imported is the first one, we have to create the artifact first
+            if (entity.versionId == 1) {
+                ArtifactEntity artifactEntity = ArtifactEntity.builder().artifactId(entity.artifactId)
+                        .artifactType(entity.artifactType).createdOn(entity.createdOn)
+                        .description(entity.description).groupId(entity.groupId)
+                        .labels(entity.labels != null
+                            ? entity.labels.stream().collect(Collectors.toMap(label -> label, label -> label))
+                            : Collections.emptyMap())
+                        .modifiedBy(entity.createdBy).modifiedOn(entity.createdOn).name(entity.name)
+                        .owner(entity.createdBy).build();
+                storage.importArtifact(artifactEntity);
+            }
+
+            storage.importArtifactVersion(newEntity);
             log.debug("Artifact version imported successfully: {}", entity);
             globalIdMapping.put(oldGlobalId, entity.globalId);
             var gav = new GAV(entity.groupId, entity.artifactId, entity.version);
@@ -97,16 +126,11 @@ public class SqlDataImporter extends AbstractDataImporter {
 
             // Import comments that were waiting for this version
             var commentsToImport = waitingForVersion.stream()
-                    .filter(comment -> comment.globalId == oldGlobalId).collect(Collectors.toList());
+                    .filter(comment -> comment.globalId == oldGlobalId).toList();
             for (CommentEntity commentEntity : commentsToImport) {
                 importComment(commentEntity);
             }
             waitingForVersion.removeAll(commentsToImport);
-
-            // Import branches waiting for version
-            artifactBranchesWaitingForVersion.computeIfAbsent(gav, _ignored -> List.of())
-                    .forEach(this::importEntity);
-            artifactBranchesWaitingForVersion.remove(gav);
 
         } catch (VersionAlreadyExistsException ex) {
             if (ex.getGlobalId() != null) {
@@ -126,34 +150,38 @@ public class SqlDataImporter extends AbstractDataImporter {
             List<ArtifactReferenceDto> references = SqlUtil
                     .deserializeReferences(entity.serializedReferences);
 
-            if (entity.contentType == null) {
-                throw new RuntimeException("ContentEntity is missing required field: contentType");
-            }
+            TypedContent typedContent = TypedContent.create(ContentHandle.create(entity.contentBytes), null);
+            Map<String, TypedContent> resolvedReferences = storage.resolveReferences(references);
+            entity.artifactType = utils.determineArtifactType(typedContent, null, resolvedReferences);
 
-            TypedContent typedContent = TypedContent.create(ContentHandle.create(entity.contentBytes),
-                    entity.contentType);
+            // First we have to recalculate both the canonical hash and the contentHash
+            TypedContent canonicalContent = utils.canonicalizeContent(entity.artifactType, typedContent,
+                    resolvedReferences);
 
-            // We do not need canonicalHash if we have artifactType
-            if (entity.canonicalHash == null && entity.artifactType != null) {
-                TypedContent canonicalContent = utils.canonicalizeContent(entity.artifactType, typedContent,
-                        storage.resolveReferences(references));
-                entity.canonicalHash = DigestUtils.sha256Hex(canonicalContent.getContent().bytes());
-            }
+            entity.canonicalHash = DigestUtils.sha256Hex(canonicalContent.getContent().bytes());
+            entity.contentHash = utils.getContentHash(typedContent, references);
 
+            // Then, based on the configuration, a new id is requested or the old one is used.
             var oldContentId = entity.contentId;
             if (!preserveContentId) {
                 entity.contentId = storage.nextContentId();
             }
 
-            storage.importContent(entity);
+            // Finally, using the information from the old content, a V3 content entity is created.
+            io.apicurio.registry.utils.impexp.v3.ContentEntity newEntity = io.apicurio.registry.utils.impexp.v3.ContentEntity
+                    .builder().contentType(entity.artifactType).contentHash(entity.contentHash)
+                    .artifactType(entity.artifactType).contentBytes(entity.contentBytes)
+                    .serializedReferences(entity.serializedReferences).canonicalHash(entity.canonicalHash)
+                    .contentId(entity.contentId).build();
+
+            storage.importContent(newEntity);
             log.debug("Content imported successfully: {}", entity);
 
             contentIdMapping.put(oldContentId, entity.contentId);
 
             // Import artifact versions that were waiting for this content
             var artifactsToImport = waitingForContent.stream()
-                    .filter(artifactVersion -> artifactVersion.contentId == oldContentId)
-                    .collect(Collectors.toList());
+                    .filter(artifactVersion -> artifactVersion.contentId == oldContentId).toList();
 
             for (ArtifactVersionEntity artifactVersionEntity : artifactsToImport) {
                 artifactVersionEntity.contentId = entity.contentId;
@@ -169,7 +197,8 @@ public class SqlDataImporter extends AbstractDataImporter {
     @Override
     public void importGlobalRule(GlobalRuleEntity entity) {
         try {
-            storage.importGlobalRule(entity);
+            storage.importGlobalRule(io.apicurio.registry.utils.impexp.v3.GlobalRuleEntity.builder()
+                    .configuration(entity.configuration).ruleType(entity.ruleType).build());
             log.debug("Global rule imported successfully: {}", entity);
         } catch (Exception ex) {
             log.warn("Failed to import global rule {}: {}", entity, ex.getMessage());
@@ -179,7 +208,12 @@ public class SqlDataImporter extends AbstractDataImporter {
     @Override
     public void importGroup(GroupEntity entity) {
         try {
-            storage.importGroup(entity);
+            io.apicurio.registry.utils.impexp.v3.GroupEntity newEntity = io.apicurio.registry.utils.impexp.v3.GroupEntity
+                    .builder().artifactsType(entity.artifactsType).createdOn(entity.createdOn)
+                    .description(entity.description).groupId(entity.groupId).labels(entity.properties)
+                    .modifiedBy(entity.modifiedBy).modifiedOn(entity.modifiedOn).owner(entity.createdBy)
+                    .build();
+            storage.importGroup(newEntity);
             log.debug("Group imported successfully: {}", entity);
         } catch (Exception ex) {
             log.warn("Failed to import group {}: {}", entity, ex.getMessage());
@@ -196,20 +230,14 @@ public class SqlDataImporter extends AbstractDataImporter {
             }
             entity.globalId = globalIdMapping.get(entity.globalId);
 
-            storage.importComment(entity);
+            io.apicurio.registry.utils.impexp.v3.CommentEntity newEntity = io.apicurio.registry.utils.impexp.v3.CommentEntity
+                    .builder().commentId(entity.commentId).createdOn(entity.createdOn)
+                    .globalId(entity.globalId).owner(entity.createdBy).value(entity.value).build();
+
+            storage.importComment(newEntity);
             log.debug("Comment imported successfully: {}", entity);
         } catch (Exception ex) {
             log.warn("Failed to import comment {}: {}", entity, ex.getMessage());
-        }
-    }
-
-    @Override
-    protected void importBranch(BranchEntity entity) {
-        try {
-            storage.importBranch(entity);
-            log.debug("Branch imported successfully: {}", entity);
-        } catch (Exception ex) {
-            log.warn("Failed to import branch {}: {}", entity, ex.getMessage());
         }
     }
 
